[package]
name = "off_screen_canvas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = { version = "~0.3", features = [
  "CanvasRenderingContext2d",
  "Document",
  "EventTarget",
  "ImageBitmap",
  "ImageBitmapRenderingContext",
  "ImageEncodeOptions",
  "HtmlElement",
  "HtmlCanvasElement",
  "OffscreenCanvasRenderingContext2d",
  "OffscreenCanvas",
  "Window",
] }
wasm-bindgen = "~0.2"
js-sys = "~0.3"
wasm-bindgen-test = "~0.3"
