[package]
name = "off_screen_canvas"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.62"
wasm-bindgen = "0.2.85"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Path2d',
  'ImageBitmap',
  'ImageBitmapRenderingContext',
  'OffscreenCanvas',
  'OffscreenCanvasRenderingContext2d',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]

[wasm32-unknown-unknown.web_sys]
rustc__flags = "--cfg web_sys_unstable_apis"

[build]
rustflags = "--cfg web_sys_unstable_apis"
